	be used to supply your own matrix of permutations. The number of
	permutations and other features of the design are set via `control`
	and function `how()` from permute.

	* ordipointlabel: now uses `ordiArgAbsorber()` to stop the warnings
	about non-graphical paramters being passed to plotting functions.

	* ordisurf: can now pass in a line width for the contours via
	argument `lwd.cl`.

Version 2.1-30 (opened May 5, 2013)

	* bioenv: can now use Mahalanobis, Manhattan and Gower distances
	for environmental variables.  The Mahalanobis distances are based
	on orthogonalized data, Manhattan distances give the direct sum of
	differences of environmental variables, and Gower distances can
	also handle factor variables. This involves adding internal
	function veganMahatrans() for Mahalanobis transformation.  The
	change was triggered by a recent email by Lydia Beaudrot (UC
	Davis) to implement Mahalanobis distances, and in the same I also
	implemented Robby Marotte's suggestion of using Gower distances
	(vegan Forum item in R-Forge in July 2012). The output is changed
	to show the 'metric' and the name of the 'method' is fully
	expanded. No more fails if 'upto' is too large. Passes "..." to
	cor() like documented, but never done.

	* rankindex: can now use Mahalanobis or Manhattan
	distances. Scales automatically gradient variables to unit
	variance (Euclidean) or range (Manhattan), and the scaling is
	already inbuilt in Mahalanobis and Gower.

	* vegdist: added Mahalanobis distance.

Version 2.1-29 (closed April 19, 2013)

	* ordisurf: significant changes were made to this function:

	 - The default for `method` and `select` were changed to `"REML"`
	and `TRUE` respectivelt.

	 - Argument `thinplate` is deprecated in favour of `isotropic`. A
	warning is now issued if `thinplate` is used.

	 - The spline basis for the smoother can now be specified from a
	subset of those implemented in the mgcv package. This is achieved